# npmenc

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml  release.yml
enclaveapp-app-adapter/: Cargo.toml
enclaveapp-app-adapter/src/: app_spec.rs  binding_store.rs  error.rs  execution_plan.rs  launcher.rs  lib.rs  prepare_launch.rs  resolver.rs  secret_store.rs  temp_config.rs  types.rs
enclaveapp-app-adapter/tests/: integration.rs
npmenc/: Cargo.toml
npmenc-core/: Cargo.toml
npmenc-core/src/: atomic_write.rs  cli_common.rs  command_kind.rs  common.rs  config_path.rs  install.rs  lib.rs  management.rs  npmrc.rs  passthrough.rs  provenance.rs  registry_bindings.rs  state_lock.rs  token_source.rs  uninstall.rs  unscoped_auth.rs
npmenc/src/: main.rs
npmenc/tests/: integration.rs
npxenc/: Cargo.toml
npxenc/src/: main.rs
npxenc/tests/: integration.rs
