[package]
name = "npxenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Direct-launch npx wrapper with secure secret delivery substrate"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
enclaveapp-app-adapter = { workspace = true }
enclaveapp-core = { workspace = true }
npmenc-core = { path = "../npmenc-core" }

[dev-dependencies]
tempfile = { workspace = true }
# See npmenc/Cargo.toml for rationale. Same mock opt-in for the
# npxenc integration tests.
enclaveapp-app-storage = { workspace = true, features = ["mock"] }

[lints]
workspace = true
